MODIFIED HTML AND CSS

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<header>
-			<img class="logo" src="images/logo.png">
+			<img class="logo" src="images/logo.png" alt="LOGO">
 			<div class="textName">
 				<h1 class="name">
 					RAHUL DHIMAN
@@ -22,16 +22,16 @@
 		</header>
 		<hr>
 		<main>
-			<img class="link" src="images/xcodeg.jpg">
+			<img class="link" src="images/xcodeg.jpg" alt="mainpage">
 			<div class="lined">
 				<p>
 					<b>MY GITHUB</b> !
 				</p>
-				<br>
+				
 				<div class="box">
-					<figure>
+				<figure>
 						<a href="https://github.com/RahulDhiman93/COURT-COUNTER" >
-							<img src="images/basketball.png" class="BB">
+							<img src="images/basketball.png" class="BB" alt="android">
 						</a>
 						<figcaption>
 							<em><b>BASKETBALL SCORE COUNTER</b></em>
@@ -39,7 +39,7 @@
 					</figure>
 					<figure>
 						<a href="https://github.com/RahulDhiman93/C-">
-							<img src="images/front.png" class="BB">
+							<img src="images/front.png" class="BB" alt="C++">
 						</a>
 						<figcaption>
 							<em><b>BASIC C++</b></em>
@@ -48,6 +48,7 @@
 					
 				</div>
 			</div>
+			
 		</main>
 	</body>
 </html>
